# cuda_practice

./: .clang-format  .gitignore  .pre-commit-config.yaml  .setuprc  CMakeLists.txt  CPPLINT.cfg  README.md
.github/workflows/: ci_test.yml
cmake/: dependencies.cmake
docker/: Dockerfile  attach.sh  build.sh  kill.sh
scripts/: permission.py
src/: CMakeLists.txt
src/00-helloworld/: CMakeLists.txt  main.cu
src/01-add-scalar/: CMakeLists.txt  main.cu
src/01-helloworld/: CMakeLists.txt  main.cc  main.cu
src/02-add-vector/: CMakeLists.txt  main.cu
src/03-clock/: CMakeLists.txt  main.cu
src/04-cooperative-groups/: CMakeLists.txt  README.md  main.cu
src/05-cuda-barrier/: CMakeLists.txt  main.cu
src/05-device/: README.md  main.cu
src/05-reduce-sum/: CMakeLists.txt  main.cu
src/06-reduction/: README.md  main.cu
src/06-reduction/experiment/block_dim/: block_dim.csv
src/06-reduction/experiment/input_size/: input_size.csv
src/07-cuda-graph/: README.md  main.cu
src/common/: exception.h  progress_bar.cc  progress_bar.h  timer.cc  timer.h  utils.cc  utils.h  utils.hpp
src/common/cuda/: exception.h  pointer.h  utils.h
test/: CMakeLists.txt
test/common/: test_exception.cu  test_utils.cc
